tests/specs/ecosystem/codemonument/zod_semver/1_3_1.test
codemonument/zod-semver/1.3.1
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
  --> /mod.jsr.ts:21:14
   | 
21 | export const ZodSemverUnbranded = z.string().regex(regexSemverNumbered);
   |              ^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /mod.jsr.ts:22:14
   | 
22 | export const ZodSemver = ZodSemverUnbranded.brand<
   |              ^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


